seaqt/QtNetwork/gen_qabstractsocket.h

typedef struct QAbstractSocket QAbstractSocket;
typedef struct QAuthenticator QAuthenticator;
typedef struct QHostAddress QHostAddress;
typedef struct QMetaObject QMetaObject;
typedef struct QNetworkProxy QNetworkProxy;
typedef struct QObject QObject;
typedef struct QVariant QVariant;
QAbstractSocket* QAbstractSocket_new(int socketType, QObject* parent);
QMetaObject* QAbstractSocket_metaObject(const QAbstractSocket* self);
void* QAbstractSocket_metacast(QAbstractSocket* self, const char* param1);
int QAbstractSocket_metacall(QAbstractSocket* self, int param1, int param2, void** param3);
struct miqt_string QAbstractSocket_tr(const char* s);
struct miqt_string QAbstractSocket_trUtf8(const char* s);
void QAbstractSocket_resume(QAbstractSocket* self);
int QAbstractSocket_pauseMode(const QAbstractSocket* self);
void QAbstractSocket_setPauseMode(QAbstractSocket* self, int pauseMode);
bool QAbstractSocket_bind(QAbstractSocket* self, QHostAddress* address);
bool QAbstractSocket_bind2(QAbstractSocket* self);
void QAbstractSocket_connectToHost(QAbstractSocket* self, struct miqt_string hostName, uint16_t port, int mode, int protocol);
void QAbstractSocket_connectToHost2(QAbstractSocket* self, QHostAddress* address, uint16_t port, int mode);
void QAbstractSocket_disconnectFromHost(QAbstractSocket* self);
bool QAbstractSocket_isValid(const QAbstractSocket* self);
long long QAbstractSocket_bytesAvailable(const QAbstractSocket* self);
long long QAbstractSocket_bytesToWrite(const QAbstractSocket* self);
bool QAbstractSocket_canReadLine(const QAbstractSocket* self);
uint16_t QAbstractSocket_localPort(const QAbstractSocket* self);
QHostAddress* QAbstractSocket_localAddress(const QAbstractSocket* self);
uint16_t QAbstractSocket_peerPort(const QAbstractSocket* self);
QHostAddress* QAbstractSocket_peerAddress(const QAbstractSocket* self);
struct miqt_string QAbstractSocket_peerName(const QAbstractSocket* self);
long long QAbstractSocket_readBufferSize(const QAbstractSocket* self);
void QAbstractSocket_setReadBufferSize(QAbstractSocket* self, long long size);
void QAbstractSocket_abort(QAbstractSocket* self);
intptr_t QAbstractSocket_socketDescriptor(const QAbstractSocket* self);
bool QAbstractSocket_setSocketDescriptor(QAbstractSocket* self, intptr_t socketDescriptor, int state, int openMode);
void QAbstractSocket_setSocketOption(QAbstractSocket* self, int option, QVariant* value);
QVariant* QAbstractSocket_socketOption(QAbstractSocket* self, int option);
int QAbstractSocket_socketType(const QAbstractSocket* self);
int QAbstractSocket_state(const QAbstractSocket* self);
int QAbstractSocket_error(const QAbstractSocket* self);
void QAbstractSocket_close(QAbstractSocket* self);
bool QAbstractSocket_isSequential(const QAbstractSocket* self);
bool QAbstractSocket_atEnd(const QAbstractSocket* self);
bool QAbstractSocket_flush(QAbstractSocket* self);
bool QAbstractSocket_waitForConnected(QAbstractSocket* self, int msecs);
bool QAbstractSocket_waitForReadyRead(QAbstractSocket* self, int msecs);
bool QAbstractSocket_waitForBytesWritten(QAbstractSocket* self, int msecs);
bool QAbstractSocket_waitForDisconnected(QAbstractSocket* self, int msecs);
void QAbstractSocket_setProxy(QAbstractSocket* self, QNetworkProxy* networkProxy);
QNetworkProxy* QAbstractSocket_proxy(const QAbstractSocket* self);
struct miqt_string QAbstractSocket_protocolTag(const QAbstractSocket* self);
void QAbstractSocket_setProtocolTag(QAbstractSocket* self, struct miqt_string tag);
void QAbstractSocket_hostFound(QAbstractSocket* self);
void QAbstractSocket_connect_hostFound(QAbstractSocket* self, intptr_t slot);
void QAbstractSocket_connected(QAbstractSocket* self);
void QAbstractSocket_connect_connected(QAbstractSocket* self, intptr_t slot);
void QAbstractSocket_disconnected(QAbstractSocket* self);
void QAbstractSocket_connect_disconnected(QAbstractSocket* self, intptr_t slot);
void QAbstractSocket_stateChanged(QAbstractSocket* self, int param1);
void QAbstractSocket_connect_stateChanged(QAbstractSocket* self, intptr_t slot);
void QAbstractSocket_errorWithQAbstractSocketSocketError(QAbstractSocket* self, int param1);
void QAbstractSocket_connect_errorWithQAbstractSocketSocketError(QAbstractSocket* self, intptr_t slot);
void QAbstractSocket_errorOccurred(QAbstractSocket* self, int param1);
void QAbstractSocket_connect_errorOccurred(QAbstractSocket* self, intptr_t slot);
void QAbstractSocket_proxyAuthenticationRequired(QAbstractSocket* self, QNetworkProxy* proxy, QAuthenticator* authenticator);
void QAbstractSocket_connect_proxyAuthenticationRequired(QAbstractSocket* self, intptr_t slot);
struct miqt_string QAbstractSocket_tr2(const char* s, const char* c);
struct miqt_string QAbstractSocket_tr3(const char* s, const char* c, int n);
struct miqt_string QAbstractSocket_trUtf82(const char* s, const char* c);
struct miqt_string QAbstractSocket_trUtf83(const char* s, const char* c, int n);
bool QAbstractSocket_bind22(QAbstractSocket* self, QHostAddress* address, uint16_t port);
bool QAbstractSocket_bind3(QAbstractSocket* self, QHostAddress* address, uint16_t port, int mode);
bool QAbstractSocket_bind1(QAbstractSocket* self, uint16_t port);
bool QAbstractSocket_bind23(QAbstractSocket* self, uint16_t port, int mode);
bool QAbstractSocket_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QAbstractSocket_virtualbase_metaObject(const void* self);
bool QAbstractSocket_override_virtual_metacast(void* self, intptr_t slot);
void* QAbstractSocket_virtualbase_metacast(void* self, const char* param1);
bool QAbstractSocket_override_virtual_metacall(void* self, intptr_t slot);
int QAbstractSocket_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QAbstractSocket_override_virtual_resume(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_resume(void* self);
bool QAbstractSocket_override_virtual_connectToHost(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_connectToHost(void* self, struct miqt_string hostName, uint16_t port, int mode, int protocol);
bool QAbstractSocket_override_virtual_connectToHost2(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_connectToHost2(void* self, QHostAddress* address, uint16_t port, int mode);
bool QAbstractSocket_override_virtual_disconnectFromHost(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_disconnectFromHost(void* self);
bool QAbstractSocket_override_virtual_bytesAvailable(void* self, intptr_t slot);
long long QAbstractSocket_virtualbase_bytesAvailable(const void* self);
bool QAbstractSocket_override_virtual_bytesToWrite(void* self, intptr_t slot);
long long QAbstractSocket_virtualbase_bytesToWrite(const void* self);
bool QAbstractSocket_override_virtual_canReadLine(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_canReadLine(const void* self);
bool QAbstractSocket_override_virtual_setReadBufferSize(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_setReadBufferSize(void* self, long long size);
bool QAbstractSocket_override_virtual_socketDescriptor(void* self, intptr_t slot);
intptr_t QAbstractSocket_virtualbase_socketDescriptor(const void* self);
bool QAbstractSocket_override_virtual_setSocketDescriptor(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_setSocketDescriptor(void* self, intptr_t socketDescriptor, int state, int openMode);
bool QAbstractSocket_override_virtual_setSocketOption(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_setSocketOption(void* self, int option, QVariant* value);
QVariant* QAbstractSocket_virtualbase_socketOption(void* self, int option);