seaqt/QtNetwork/gen_qabstractsocket.nim


proc fcQAbstractSocket_new(socketType: cint, parent: pointer): ptr cQAbstractSocket {.importc: "QAbstractSocket_new".}
proc fcQAbstractSocket_metaObject(self: pointer, ): pointer {.importc: "QAbstractSocket_metaObject".}
proc fcQAbstractSocket_metacast(self: pointer, param1: cstring): pointer {.importc: "QAbstractSocket_metacast".}
proc fcQAbstractSocket_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QAbstractSocket_metacall".}
proc fcQAbstractSocket_tr(s: cstring): struct_miqt_string {.importc: "QAbstractSocket_tr".}
proc fcQAbstractSocket_trUtf8(s: cstring): struct_miqt_string {.importc: "QAbstractSocket_trUtf8".}
proc fcQAbstractSocket_resume(self: pointer, ): void {.importc: "QAbstractSocket_resume".}
proc fcQAbstractSocket_pauseMode(self: pointer, ): cint {.importc: "QAbstractSocket_pauseMode".}
proc fcQAbstractSocket_setPauseMode(self: pointer, pauseMode: cint): void {.importc: "QAbstractSocket_setPauseMode".}
proc fcQAbstractSocket_bindX(self: pointer, address: pointer): bool {.importc: "QAbstractSocket_bind".}
proc fcQAbstractSocket_bind2(self: pointer, ): bool {.importc: "QAbstractSocket_bind2".}
proc fcQAbstractSocket_connectToHost(self: pointer, hostName: struct_miqt_string, port: cushort, mode: cint, protocol: cint): void {.importc: "QAbstractSocket_connectToHost".}
proc fcQAbstractSocket_connectToHost2(self: pointer, address: pointer, port: cushort, mode: cint): void {.importc: "QAbstractSocket_connectToHost2".}
proc fcQAbstractSocket_disconnectFromHost(self: pointer, ): void {.importc: "QAbstractSocket_disconnectFromHost".}
proc fcQAbstractSocket_isValid(self: pointer, ): bool {.importc: "QAbstractSocket_isValid".}
proc fcQAbstractSocket_bytesAvailable(self: pointer, ): clonglong {.importc: "QAbstractSocket_bytesAvailable".}
proc fcQAbstractSocket_bytesToWrite(self: pointer, ): clonglong {.importc: "QAbstractSocket_bytesToWrite".}
proc fcQAbstractSocket_canReadLine(self: pointer, ): bool {.importc: "QAbstractSocket_canReadLine".}
proc fcQAbstractSocket_localPort(self: pointer, ): cushort {.importc: "QAbstractSocket_localPort".}
proc fcQAbstractSocket_localAddress(self: pointer, ): pointer {.importc: "QAbstractSocket_localAddress".}
proc fcQAbstractSocket_peerPort(self: pointer, ): cushort {.importc: "QAbstractSocket_peerPort".}
proc fcQAbstractSocket_peerAddress(self: pointer, ): pointer {.importc: "QAbstractSocket_peerAddress".}
proc fcQAbstractSocket_peerName(self: pointer, ): struct_miqt_string {.importc: "QAbstractSocket_peerName".}
proc fcQAbstractSocket_readBufferSize(self: pointer, ): clonglong {.importc: "QAbstractSocket_readBufferSize".}
proc fcQAbstractSocket_setReadBufferSize(self: pointer, size: clonglong): void {.importc: "QAbstractSocket_setReadBufferSize".}
proc fcQAbstractSocket_abort(self: pointer, ): void {.importc: "QAbstractSocket_abort".}
proc fcQAbstractSocket_socketDescriptor(self: pointer, ): uint {.importc: "QAbstractSocket_socketDescriptor".}
proc fcQAbstractSocket_setSocketDescriptor(self: pointer, socketDescriptor: uint, state: cint, openMode: cint): bool {.importc: "QAbstractSocket_setSocketDescriptor".}
proc fcQAbstractSocket_setSocketOption(self: pointer, option: cint, value: pointer): void {.importc: "QAbstractSocket_setSocketOption".}
proc fcQAbstractSocket_socketOption(self: pointer, option: cint): pointer {.importc: "QAbstractSocket_socketOption".}
proc fcQAbstractSocket_socketType(self: pointer, ): cint {.importc: "QAbstractSocket_socketType".}
proc fcQAbstractSocket_state(self: pointer, ): cint {.importc: "QAbstractSocket_state".}
proc fcQAbstractSocket_error(self: pointer, ): cint {.importc: "QAbstractSocket_error".}
proc fcQAbstractSocket_close(self: pointer, ): void {.importc: "QAbstractSocket_close".}
proc fcQAbstractSocket_isSequential(self: pointer, ): bool {.importc: "QAbstractSocket_isSequential".}
proc fcQAbstractSocket_atEnd(self: pointer, ): bool {.importc: "QAbstractSocket_atEnd".}
proc fcQAbstractSocket_flush(self: pointer, ): bool {.importc: "QAbstractSocket_flush".}
proc fcQAbstractSocket_waitForConnected(self: pointer, msecs: cint): bool {.importc: "QAbstractSocket_waitForConnected".}
proc fcQAbstractSocket_waitForReadyRead(self: pointer, msecs: cint): bool {.importc: "QAbstractSocket_waitForReadyRead".}
proc fcQAbstractSocket_waitForBytesWritten(self: pointer, msecs: cint): bool {.importc: "QAbstractSocket_waitForBytesWritten".}
proc fcQAbstractSocket_waitForDisconnected(self: pointer, msecs: cint): bool {.importc: "QAbstractSocket_waitForDisconnected".}
proc fcQAbstractSocket_setProxy(self: pointer, networkProxy: pointer): void {.importc: "QAbstractSocket_setProxy".}
proc fcQAbstractSocket_proxy(self: pointer, ): pointer {.importc: "QAbstractSocket_proxy".}
proc fcQAbstractSocket_protocolTag(self: pointer, ): struct_miqt_string {.importc: "QAbstractSocket_protocolTag".}
proc fcQAbstractSocket_setProtocolTag(self: pointer, tag: struct_miqt_string): void {.importc: "QAbstractSocket_setProtocolTag".}
proc fcQAbstractSocket_hostFound(self: pointer, ): void {.importc: "QAbstractSocket_hostFound".}
proc fcQAbstractSocket_connect_hostFound(self: pointer, slot: int) {.importc: "QAbstractSocket_connect_hostFound".}
proc fcQAbstractSocket_connected(self: pointer, ): void {.importc: "QAbstractSocket_connected".}
proc fcQAbstractSocket_connect_connected(self: pointer, slot: int) {.importc: "QAbstractSocket_connect_connected".}
proc fcQAbstractSocket_disconnected(self: pointer, ): void {.importc: "QAbstractSocket_disconnected".}
proc fcQAbstractSocket_connect_disconnected(self: pointer, slot: int) {.importc: "QAbstractSocket_connect_disconnected".}
proc fcQAbstractSocket_stateChanged(self: pointer, param1: cint): void {.importc: "QAbstractSocket_stateChanged".}
proc fcQAbstractSocket_connect_stateChanged(self: pointer, slot: int) {.importc: "QAbstractSocket_connect_stateChanged".}
proc fcQAbstractSocket_errorWithQAbstractSocketSocketError(self: pointer, param1: cint): void {.importc: "QAbstractSocket_errorWithQAbstractSocketSocketError".}
proc fcQAbstractSocket_connect_errorWithQAbstractSocketSocketError(self: pointer, slot: int) {.importc: "QAbstractSocket_connect_errorWithQAbstractSocketSocketError".}
proc fcQAbstractSocket_errorOccurred(self: pointer, param1: cint): void {.importc: "QAbstractSocket_errorOccurred".}
proc fcQAbstractSocket_connect_errorOccurred(self: pointer, slot: int) {.importc: "QAbstractSocket_connect_errorOccurred".}
proc fcQAbstractSocket_proxyAuthenticationRequired(self: pointer, proxy: pointer, authenticator: pointer): void {.importc: "QAbstractSocket_proxyAuthenticationRequired".}
proc fcQAbstractSocket_connect_proxyAuthenticationRequired(self: pointer, slot: int) {.importc: "QAbstractSocket_connect_proxyAuthenticationRequired".}
proc fcQAbstractSocket_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QAbstractSocket_tr2".}
proc fcQAbstractSocket_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAbstractSocket_tr3".}
proc fcQAbstractSocket_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QAbstractSocket_trUtf82".}
proc fcQAbstractSocket_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAbstractSocket_trUtf83".}
proc fcQAbstractSocket_bind22(self: pointer, address: pointer, port: cushort): bool {.importc: "QAbstractSocket_bind22".}
proc fcQAbstractSocket_bind3(self: pointer, address: pointer, port: cushort, mode: cint): bool {.importc: "QAbstractSocket_bind3".}
proc fcQAbstractSocket_bind1(self: pointer, port: cushort): bool {.importc: "QAbstractSocket_bind1".}
proc fcQAbstractSocket_bind23(self: pointer, port: cushort, mode: cint): bool {.importc: "QAbstractSocket_bind23".}
proc fQAbstractSocket_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QAbstractSocket_virtualbase_metaObject".}
proc fcQAbstractSocket_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_metaObject".}
proc fQAbstractSocket_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QAbstractSocket_virtualbase_metacast".}
proc fcQAbstractSocket_override_virtual_metacast(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_metacast".}
proc fQAbstractSocket_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QAbstractSocket_virtualbase_metacall".}
proc fcQAbstractSocket_override_virtual_metacall(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_metacall".}
proc fQAbstractSocket_virtualbase_resume(self: pointer, ): void{.importc: "QAbstractSocket_virtualbase_resume".}
proc fcQAbstractSocket_override_virtual_resume(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_resume".}
proc fQAbstractSocket_virtualbase_connectToHost(self: pointer, hostName: struct_miqt_string, port: cushort, mode: cint, protocol: cint): void{.importc: "QAbstractSocket_virtualbase_connectToHost".}
proc fcQAbstractSocket_override_virtual_connectToHost(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_connectToHost".}
proc fQAbstractSocket_virtualbase_connectToHost2(self: pointer, address: pointer, port: cushort, mode: cint): void{.importc: "QAbstractSocket_virtualbase_connectToHost2".}
proc fcQAbstractSocket_override_virtual_connectToHost2(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_connectToHost2".}
proc fQAbstractSocket_virtualbase_disconnectFromHost(self: pointer, ): void{.importc: "QAbstractSocket_virtualbase_disconnectFromHost".}
proc fcQAbstractSocket_override_virtual_disconnectFromHost(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_disconnectFromHost".}
proc fQAbstractSocket_virtualbase_bytesAvailable(self: pointer, ): clonglong{.importc: "QAbstractSocket_virtualbase_bytesAvailable".}
proc fcQAbstractSocket_override_virtual_bytesAvailable(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_bytesAvailable".}
proc fQAbstractSocket_virtualbase_bytesToWrite(self: pointer, ): clonglong{.importc: "QAbstractSocket_virtualbase_bytesToWrite".}
proc fcQAbstractSocket_override_virtual_bytesToWrite(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_bytesToWrite".}
proc fQAbstractSocket_virtualbase_canReadLine(self: pointer, ): bool{.importc: "QAbstractSocket_virtualbase_canReadLine".}
proc fcQAbstractSocket_override_virtual_canReadLine(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_canReadLine".}
proc fQAbstractSocket_virtualbase_setReadBufferSize(self: pointer, size: clonglong): void{.importc: "QAbstractSocket_virtualbase_setReadBufferSize".}
proc fcQAbstractSocket_override_virtual_setReadBufferSize(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_setReadBufferSize".}
proc fQAbstractSocket_virtualbase_socketDescriptor(self: pointer, ): uint{.importc: "QAbstractSocket_virtualbase_socketDescriptor".}
proc fcQAbstractSocket_override_virtual_socketDescriptor(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_socketDescriptor".}
proc fQAbstractSocket_virtualbase_setSocketDescriptor(self: pointer, socketDescriptor: uint, state: cint, openMode: cint): bool{.importc: "QAbstractSocket_virtualbase_setSocketDescriptor".}
proc fcQAbstractSocket_override_virtual_setSocketDescriptor(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_setSocketDescriptor".}
proc fQAbstractSocket_virtualbase_setSocketOption(self: pointer, option: cint, value: pointer): void{.importc: "QAbstractSocket_virtualbase_setSocketOption".}
proc fcQAbstractSocket_override_virtual_setSocketOption(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_setSocketOption".}
proc fQAbstractSocket_virtualbase_socketOption(self: pointer, option: cint): pointer{.importc: "QAbstractSocket_virtualbase_socketOption".}
